fix report icon overlapping with banner

--- a/src/routes/landing/landing.less
+++ b/src/routes/landing/landing.less
@@ -699,8 +699,10 @@ tr.row.report {
   height: 85px;
   width: 100px;
   overflow: hidden;
+  position: absolute;
+  top: 40px;
 
-  @media screen and (max-height: 470px){
+  @media only screen and (max-width: 768px){
     width: 155px;
     position: absolute;
     top: 85px;
